@@ -27,6 +27,9 @@
   <LI> magick/constitute.c (DispatchImage): Support 8-bit output to
         common formats BGR, BGRO, BGRP, RGB, RGBO, and I as special cases
         in order to improve performance.
+        (ConstituteImage): Support 8-bit input from common formats BGR,
+        BGRO, BGRP, RGB, RGBO, and I as special cases in order to improve
+        performance.
 
 </UL>
 <p>
